added low abudance feature